--- a/style.css
+++ b/style.css
@@ -41,9 +41,12 @@ body {
     margin-top: 30px;
 }
 
+
+
+
 .donate-day-area {
     text-align: center;
-    width: 70%;
+    width: 80%;
     margin: 0 auto;
     padding: 65px 0;
 }
@@ -56,7 +59,7 @@ body {
 
 .donet-text-area p {
     font-size: 15px;
-    width: 65%;
+    width: 55%;
     margin: 0 auto;
     padding-top: 10px;
     padding-bottom: 30px;
@@ -86,4 +89,53 @@ body {
     display: inline-block;
     background-color: LAVENDER;
     border-radius: 5px;
+}
+
+
+
+
+.donate-plan-area {
+    text-align: center;
+    width: 80%;
+    margin: 0 auto;
+    padding-bottom: 40px;
+}
+
+.donet-plan-text-area h1 {
+    font-size: 40px;
+    margin-bottom: 10px;
+    font-weight: 700;
+}
+
+.donet-plan-text-area p {
+    font-size: 15px;
+    width: 55%;
+    margin: 0 auto;
+    padding-top: 10px;
+    padding-bottom: 30px;
+}
+
+.donate-plan-item {
+    display: flex;
+    margin-top: 15px;
+}
+
+.donate-plan-item-width {
+    width: 33%;
+    padding: 40px 20px 30px;
+    margin: 0 10px;
+    text-align: left;
+    border-radius: 5px;
+}
+
+#item-width-one {
+    background-color: lightblue;
+}
+
+#item-width-two {
+    background-color: pink;
+}
+
+#item-width-three {
+    background-color: blanchedalmond;
 }
