--- a/style.css
+++ b/style.css
@@ -33,13 +33,15 @@ body {
 .donate-button {
     text-decoration: none;
     padding: 15px 18px;
-    background-color: red;
+    background-color: tomato;
     color: white;
     font-weight: bold;
     border-radius: 5px;
     display: inline-block;
     margin-top: 30px;
+    letter-spacing: 1px;
 }
+
 
 
 
@@ -65,12 +67,17 @@ body {
     padding-bottom: 30px;
 }
 
+.donate-text-area ul {
+    color: gray;
+}
+
 .donate-text-area ul li {
     list-style-type: none;
     display: inline-block;
-    font-size: 25px;
+    font-size: 26px;
     font-weight: bold;
-    padding: 30px 20px;
+    letter-spacing: 1px;
+    padding: 32px 20px;
     margin: 0px 10px;
 }
 
@@ -85,12 +92,14 @@ body {
 }
 
 .taka-color {
-    border: 2px solid red;
-    color: red;
+    border: 2px solid tomato;
+    color: tomato;
     display: inline-block;
-    background-color: LAVENDER;
+    background-color: mistyrose;
     border-radius: 5px;
 }
+
+
 
 
 
@@ -145,6 +154,7 @@ body {
 
 
 
+
 .donate-qurbani-area {
     text-align: center;
     width: 80%;
@@ -194,8 +204,9 @@ body {
 
 .qurbani-item-width a {
     text-decoration: none;
-    color: red;
+    color: tomato;
 }
+
 
 
 
@@ -245,6 +256,29 @@ body {
     border: none;
     border-radius: 0 5px 5px 0;
     color: white;
-    background-color: red;
+    background-color: tomato;
     margin-left: -4px;
+}
+
+
+
+
+footer {
+    background-color: black;
+    text-align: center;
+    padding: 30px 0;
+    margin-top: 65px;
+}
+
+footer h3 {
+    font-family: 'Lobster', cursive;
+    color: tomato;
+    font-size: 30px;
+    font-weight: normal;
+    margin: 15px 0;
+}
+
+footer small {
+    color: white;
+    font-size: 10px;
 }
